--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-promise-router": "^4.1.0",
     "joi": "^17.4.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.3"
+    "mongoose": "^5.13.3",
+    "socket.io": "^4.2.0"
   }
 }
